--- a/index.html
+++ b/index.html
@@ -2,9 +2,85 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+	<!-- aldrig slet characterset -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--Viewport: Hjælper med at vise hjemmesiden pænt på alle enheder.-->
+
+
+<title>Mads Dalsgaard</title>
 </head>
 
 <body>
+	<p>Click <a href="#test">here</a></p>
+	<h1>Mads Dalsgaard</h1>
+	<h2><i>Proud owner of the big blizzard bear </i></h2>
+	<hr>
+	<h2> Siden her indeholder:</h2>
+	
+	<ul>
+	<li>h1</li>
+	<li>h2</li>
+	<li>p</li>
+	<li>ul</li>
+	<li>li</li>
+	<li>hr</li>
+	<li>strong</li>
+	</ul>
+	<img src="img/nerd.jpg" alt="alternativ tekst"
+		 style="width: 100px;">
+	<h2><i>Proud owner of the big blizzard bear</i></h2>
+ <!-- <br> og <hr> skal ikke afsluttes fordi det horizontel linje og linje afstand -->
+	<ul>
+	<li>LOL</li>
+	<li>FOrtnite</li>
+	
+	</ul>
+	
+	<ol>
+	<li>LOL</li>
+	<li>FOrtnite</li>
+	
+	</ol>
+	
+	<table style="border: 1px solid black" id="test">
+		<tr>
+			<td style="border: 1px solid black">Mandag</td>
+			<td>Tirsdag</td>
+			<td>Onsdag</td>
+			<td>Torsdag</td>
+			<td>Fredag</td>
+			<td>Lørdag</td>
+			<td>Søndag</td>
+		
+		</tr>
+		
+		<tr>
+			<td>Mandag</td>
+			<td>Tirsdag</td>
+			<td>Onsdag</td>
+			<td>Torsdag</td>
+			<td>Fredag</td>
+			<td>Lørdag</td>
+		    <td>Søndag</td>
+			
+		
+		</tr>
+	
+	</table>
+	<div style="background: #7A292A; border: 2px solid black;">
+	<p>Click <a href="https://www.youtube.com/@avatard2858" target="_blank">here </a> to see my youtube channel.</p>
+	<p>Click <a href="tel:+45 20307106"> here</a> to phone me.</p>
+	</div>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/RNZYT3J-Bvg?si=6HJRT4DA7An66yjn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	
+	<br>
+	<form>
+	<label>Fornavn:</label> <input type="text" value="indsæt fornavn her">
+	<br>
+	<br>
+	<label>Efternavn:</label> <input style="width: 200px; height: 100px;" type="text" value="indsæt efternavn her">
+	
+	</form>
+	<p><a href="img/Raidlogging Databaser.pdf" download>Raidlogging Database 2. Semester as Datamatician  (Danish) </a> </p> 
 </body>
 </html>
