første hompage færdig
stort set title

--- a/fredag.html
+++ b/fredag.html
@@ -2,26 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Mads Dalsgaard</title>
 <link href="style2.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://use.typekit.net/iyr8aqf.css">
 </head>
 
 <body>
+	
 	<nav>
 		<div>
-	    <img src="img/mig.jpg" width="80px" height="80px" alt=""/>
+	    <img src="img/mig.jpg" width="150px" height="150px" alt=""/>
 		</div>
+		<h1>Mads Dalsgaard</h1>
+		<h2>Proud owner of the big blizzard bear</h2>
 		<input id="menu-activate" type="checkbox">
 		<label class="menu-box" for="menu-activate">
 		<div class="menu-icon"></div>
 		</label>
 		<ul class="menu">
-		<li>Home</li>
+		<li ><a href="fredag.html">Home</a></li> <!--This href is to make sure people can navigate by pressing the actual name. -->
 		<li>Achievements</li>
 		<li>Projects</li>
 		<li>Contact me</li>
 		</ul>
 	
 	</nav>
+	
+	<div class="mainsbackgroundpicture">
+	<br> <br>
+	<p class="descriptiontext">Welcome to my portfolio site, my name is Mads Dalsgaard &amp; im pleased to tell you about myself &amp; show you my work! I was born on the 4th of April 2004, born &amp; raised in Denmark. From very early on i developed a strong passion for video games, espcially WoW. I was introduced to the world of Azeroth back in 2008 &amp; started my own adventures in 2011. Over the years i've conquered many different aspects of the world, from slaying raid bosses on mythic to battling in the arena. But one thing i've always been interested in since i can remember is collectibles. Farming mounts, achievements or whatever it may be, i have always been interested, espcially with the design of mounts &amp; the requirements of getting one. Always been a HUGE fan of the puzzle ones. Hopefully you will have a look around &amp; enjoy what i have made &amp; what's on it's way. LOK'TAR OGAR!</p>
+	</div>
+	
+	
+
 </body>
 </html>
